# gfx-engine

./: .gitattributes  .gitignore  .vimrc  CMakeLists.txt  WavefrontGeometry.cpp  engine.hpp  main.cpp
gfx/: Buffer.cpp  CMakeLists.txt  Program.cpp  Shader.cpp  VertexArray.cpp  gfx.cpp
gfx/detail/: CMakeLists.txt
gfx/detail/include/: Array.hpp
gfx/glsl/: CMakeLists.txt  FragmentShader.cpp  Program.cpp  Shader.cpp  ShaderSource.cpp  VertexShader.cpp
gfx/glsl/include/: FragmentShader.hpp  GLSLObject.hpp  Program.hpp  Shader.hpp  ShaderSource.hpp  VertexShader.hpp  glsl.hpp
gfx/include/: Buffer.hpp  Object.hpp  Program.hpp  Shader.hpp  VertexArray.hpp  gfx.hpp
include/: WavefrontGeometry.hpp
resources/: FragmentDefault.shader  VertexDefault.shader
